--- a/admin.html
+++ b/admin.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Beach House Admin v2.1</title>
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.7/dist/umd/supabase.all.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.7/dist/umd/supabase.min.js"></script>
 <style>
 :root {
     --primary: #0077cc;
@@ -225,102 +225,104 @@ td {
 </main>
 
 <script>
-const SUPABASE_URL = 'https://ofnlpqfscyecatetnuqi.supabase.co';
-const SUPABASE_KEY = 'sb_publishable_jjdmHkgGrbjqYwY14kS9ng_Ivuq-Pjc';
-const supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+window.onload = () => {
+    // Supabase client
+    const SUPABASE_URL = 'https://ofnlpqfscyecatetnuqi.supabase.co';
+    const SUPABASE_KEY = 'sb_publishable_jjdmHkgGrbjqYwY14kS9ng_Ivuq-Pjc';
+    const supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
-// --- Tab Switching ---
-document.querySelectorAll('.tab').forEach(tab => {
-    tab.addEventListener('click', () => {
-        document.querySelectorAll('.tab').forEach(t => t.classList.remove('active'));
-        document.querySelectorAll('.tab-content').forEach(c => c.classList.remove('active'));
-        tab.classList.add('active');
-        const target = document.getElementById(tab.dataset.tab);
-        target.classList.add('active');
+    // --- Tab Switching ---
+    const tabs = document.querySelectorAll('.tab');
+    const contents = document.querySelectorAll('.tab-content');
+    tabs.forEach(tab => {
+        tab.addEventListener('click', () => {
+            tabs.forEach(t => t.classList.remove('active'));
+            contents.forEach(c => c.classList.remove('active'));
+            tab.classList.add('active');
+            document.getElementById(tab.dataset.tab).classList.add('active');
 
-        if(tab.dataset.tab === 'guests') loadGuests();
-        if(tab.dataset.tab === 'work') loadWorkRequests();
-        if(tab.dataset.tab === 'messages') loadMessages();
+            if(tab.dataset.tab === 'guests') loadGuests();
+            if(tab.dataset.tab === 'work') loadWorkRequests();
+            if(tab.dataset.tab === 'messages') loadMessages();
+        });
     });
-});
 
-// --- Load Guests ---
-async function loadGuests() {
-    const { data, error } = await supabaseClient.from('guests').select('*').order('start_date', { ascending: true });
-    if(error) return console.error(error);
-    const tbody = document.querySelector('#guest-table tbody');
-    tbody.innerHTML = data.map(g => `
-        <tr>
-            <td><strong>${g.guest_last_name}</strong></td>
-            <td>${g.start_date}</td>
-            <td>${g.end_date}</td>
-            <td><span class="badge ${g.checked_in ? 'badge-green' : 'badge-gray'}">${g.checked_in ? 'In House' : 'Upcoming'}</span></td>
-            <td>
-                <button class="btn-sm secondary" onclick="extendGuest(${g.id}, '${g.end_date}')">Extend</button>
-                <button class="btn-sm" style="background:#beccda; color:#333" onclick="cancelGuest(${g.id})">Delete</button>
-            </td>
-        </tr>
-    `).join('');
-}
+    // --- Load Guests ---
+    async function loadGuests() {
+        const { data, error } = await supabaseClient.from('guests').select('*').order('start_date', { ascending: true });
+        if(error) return console.error(error);
+        const tbody = document.querySelector('#guest-table tbody');
+        tbody.innerHTML = data.map(g => `
+            <tr>
+                <td><strong>${g.guest_last_name}</strong></td>
+                <td>${g.start_date}</td>
+                <td>${g.end_date}</td>
+                <td><span class="badge ${g.checked_in ? 'badge-green' : 'badge-gray'}">${g.checked_in ? 'In House' : 'Upcoming'}</span></td>
+                <td>
+                    <button class="btn-sm secondary" onclick="extendGuest(${g.id}, '${g.end_date}')">Extend</button>
+                    <button class="btn-sm" style="background:#beccda; color:#333" onclick="cancelGuest(${g.id})">Delete</button>
+                </td>
+            </tr>
+        `).join('');
+    }
 
-// --- Work Requests ---
-async function loadWorkRequests() {
-    const { data, error } = await supabaseClient.from('work_requests').select('*, guests(guest_last_name)').order('created_at', { ascending: false });
-    const tbody = document.querySelector('#work-table tbody');
-    if(!tbody || error) return;
-    tbody.innerHTML = data.map(w => `<tr><td>${w.guests?.guest_last_name || 'Guest'}</td><td>${w.request_text}</td><td>${new Date(w.created_at).toLocaleDateString()}</td></tr>`).join('');
-}
+    // --- Work Requests ---
+    async function loadWorkRequests() {
+        const { data, error } = await supabaseClient.from('work_requests').select('*, guests(guest_last_name)').order('created_at', { ascending: false });
+        const tbody = document.querySelector('#work-table tbody');
+        if(!tbody || error) return;
+        tbody.innerHTML = data.map(w => `<tr><td>${w.guests?.guest_last_name || 'Guest'}</td><td>${w.request_text}</td><td>${new Date(w.created_at).toLocaleDateString()}</td></tr>`).join('');
+    }
 
-// --- Messages ---
-async function loadMessages() {
-    const { data, error } = await supabaseClient.from('messages').select('*, guests(guest_last_name)').order('created_at', { ascending: false });
-    const tbody = document.querySelector('#message-table tbody');
-    if(!tbody || error) return;
-    tbody.innerHTML = data.map(m => `<tr><td>${m.guests?.guest_last_name || 'Guest'}</td><td>${m.message_text}</td><td>${new Date(m.created_at).toLocaleDateString()}</td></tr>`).join('');
-}
+    // --- Messages ---
+    async function loadMessages() {
+        const { data, error } = await supabaseClient.from('messages').select('*, guests(guest_last_name)').order('created_at', { ascending: false });
+        const tbody = document.querySelector('#message-table tbody');
+        if(!tbody || error) return;
+        tbody.innerHTML = data.map(m => `<tr><td>${m.guests?.guest_last_name || 'Guest'}</td><td>${m.message_text}</td><td>${new Date(m.created_at).toLocaleDateString()}</td></tr>`).join('');
+    }
 
-// --- Actions ---
-window.cancelGuest = async (id) => {
-    if(!confirm("Delete reservation?")) return;
-    await supabaseClient.from('guests').delete().eq('id', id);
+    // --- Global Actions ---
+    window.cancelGuest = async (id) => {
+        if(!confirm("Delete reservation?")) return;
+        await supabaseClient.from('guests').delete().eq('id', id);
+        loadGuests();
+    };
+
+    window.extendGuest = async (id, currentEnd) => {
+        const days = prompt("Days to add:");
+        if(!days || isNaN(days)) return;
+        const date = new Date(currentEnd);
+        date.setDate(date.getDate() + parseInt(days));
+        await supabaseClient.from('guests').update({ end_date: date.toISOString().split('T')[0] }).eq('id', id);
+        loadGuests();
+    };
+
+    // --- Add Guest ---
+    document.getElementById('add-guest-btn').addEventListener('click', async () => {
+        const ln = document.getElementById('guest-lastname').value;
+        const sd = document.getElementById('start-date').value;
+        const ed = document.getElementById('end-date').value;
+        if(!ln || !sd || !ed) return alert("Fill all fields");
+        await supabaseClient.from('guests').insert([{ guest_last_name: ln, start_date: sd, end_date: ed, checked_in: false }]);
+        loadGuests();
+        ['guest-lastname', 'start-date', 'end-date'].forEach(id => document.getElementById(id).value = "");
+    });
+
+    // --- Tablet Controls ---
+    document.getElementById('lock-btn').addEventListener('click', async () => {
+        await supabaseClient.from('controls').update({ tablet_locked: true }).eq('id', 1);
+        alert("Tablet Locked");
+    });
+
+    document.getElementById('unlock-btn').addEventListener('click', async () => {
+        await supabaseClient.from('controls').update({ tablet_locked: false }).eq('id', 1);
+        alert("Tablet Unlocked");
+    });
+
+    // --- Initial Load ---
     loadGuests();
 };
-
-window.extendGuest = async (id, currentEnd) => {
-    const days = prompt("Days to add:");
-    if(!days || isNaN(days)) return;
-    const date = new Date(currentEnd);
-    date.setDate(date.getDate() + parseInt(days));
-    await supabaseClient.from('guests').update({ end_date: date.toISOString().split('T')[0] }).eq('id', id);
-    loadGuests();
-};
-
-// --- Add Guest ---
-document.getElementById('add-guest-btn').addEventListener('click', async () => {
-    const ln = document.getElementById('guest-lastname').value;
-    const sd = document.getElementById('start-date').value;
-    const ed = document.getElementById('end-date').value;
-    if(!ln || !sd || !ed) return alert("Fill all fields");
-    await supabaseClient.from('guests').insert([{ guest_last_name: ln, start_date: sd, end_date: ed, checked_in: false }]);
-    loadGuests();
-    ['guest-lastname', 'start-date', 'end-date'].forEach(id => document.getElementById(id).value = "");
-});
-
-// --- Tablet Controls ---
-document.getElementById('lock-btn').addEventListener('click', async () => {
-    await supabaseClient.from('controls').update({ tablet_locked: true }).eq('id', 1);
-    alert("Tablet Locked");
-});
-
-document.getElementById('unlock-btn').addEventListener('click', async () => {
-    await supabaseClient.from('controls').update({ tablet_locked: false }).eq('id', 1);
-    alert("Tablet Unlocked");
-});
-
-// --- Initial Load ---
-window.addEventListener('load', () => {
-    loadGuests();
-});
 </script>
 </body>
 </html>
